<resources>
    <string name="app_name">Foodflix</string>
    <string name="Login">Login to your account</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="loginbtn">Login</string>
    <string name="NoAccount">Create A New Account</string>
    <string name="Joke">Joke, laugh or leave</string>
    <string name="Search">What do you want to search?</string>
    <string name="Searchbtn">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">User\'s Profile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Nutrition">Nutrition Analysis</string>
    <string name="Food">Food Search</string>
    <string name="Recipes">Recipes Search</string>
    <string name="title_activity_searching">SearchingActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Example">e.g. Chicken, Pasta, Rice etc.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_search">SearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_navigation_drawer">Foodflix</string>


    <string name="Register">Registration</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="ValidPassword">Validate Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="required">Required</string>
    <string name="guestbtn">Guest</string>
    <string name="UsersProfile">User\'s Profile</string>
    <string name="textview">textview</string>
    <string name="category">category</string>

    <string-array name="Titles">
        <item>Chicken</item>
        <item>Rice</item>
        <item>Pastitsio</item>
        <item>Arakas</item>
        <item>Fasolakia</item>
    </string-array>

    <string-array name="Descriptions">
        <item>Chicken description</item>
        <item>Rice description</item>
        <item>Pastitsio description</item>
        <item>Arakas description</item>
        <item>Fasolakia description</item>
    </string-array>
    <string name="title_activity_main_page">MainPageActivity</string>
</resources>