<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".ui.slideshow.SlideshowFragment">

    <TextView
        android:id="@+id/recipeFragTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/Search"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/recipeFragInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipeFragInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Example"
        app:boxCornerRadiusBottomEnd="35dp"
        app:boxCornerRadiusBottomStart="35dp"
        app:boxCornerRadiusTopEnd="35dp"
        app:boxCornerRadiusTopStart="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeFragTxt"
        app:startIconDrawable="@drawable/ic_baseline_search_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/recipeFragInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/recipeGuideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/recipeGuidelineH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <TextView
        android:id="@+id/diet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Diet"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/checkVegetarian"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/recipeGuideline"
        app:layout_constraintTop_toBottomOf="@id/recipeGuidelineH" />

    <CheckBox
        android:id="@+id/checkVegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="vegeterian"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/checkVegan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diet" />

    <CheckBox
        android:id="@+id/checkVegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="vegan"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/checkLowFat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkVegetarian" />

    <CheckBox
        android:id="@+id/checkLowFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="low-fat-abs"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/checkHighProtein"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkVegan" />

    <CheckBox
        android:id="@+id/checkHighProtein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="high-protein"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkLowFat" />

    <TextView
        android:id="@+id/health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Health"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/checkGluten"
        app:layout_constraintLeft_toRightOf="@id/recipeGuideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeGuidelineH" />

    <CheckBox
        android:id="@+id/checkGluten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:text="gluten-free"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/checkImmunoSupportive"
        app:layout_constraintLeft_toRightOf="@id/recipeGuideline"
        app:layout_constraintTop_toBottomOf="@id/health" />

    <CheckBox
        android:id="@+id/checkImmunoSupportive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:text="immuno-supportive"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/checkWheat"
        app:layout_constraintLeft_toRightOf="@id/recipeGuideline"
        app:layout_constraintTop_toBottomOf="@id/checkGluten" />

    <CheckBox
        android:id="@+id/checkWheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="wheat-free"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/checkShellfish"
        app:layout_constraintLeft_toRightOf="@id/recipeGuideline"
        app:layout_constraintTop_toBottomOf="@id/checkImmunoSupportive" />

    <CheckBox
        android:id="@+id/checkShellfish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="shellfish-free"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/recipeGuideline"
        app:layout_constraintTop_toBottomOf="@id/checkWheat"
        app:layout_constraintBottom_toTopOf="@id/recipeSearchBtn"/>

    <Button
        android:id="@+id/recipeSearchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Searchbtn"
        app:layout_constraintTop_toBottomOf="@id/checkShellfish"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>