<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp">

    <ImageView
        android:id="@+id/searchbackbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"

        android:layout_marginTop="10dp"
        android:backgroundTint="@color/dRed"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:src="@drawable/ic_round_arrow_back_ios_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/Search"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/foodInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/foodInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Example"
        app:boxCornerRadiusBottomEnd="35dp"
        app:boxCornerRadiusBottomStart="35dp"
        app:boxCornerRadiusTopEnd="35dp"
        app:boxCornerRadiusTopStart="35dp"
        app:layout_constraintBottom_toTopOf="@id/diet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragTxt"
        app:startIconDrawable="@drawable/ic_baseline_search_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/foodInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <TextView
        android:id="@+id/diet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dRed"
        android:text="Choose Diet Type"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/guidelineH1" />

    <CheckBox
        android:id="@+id/balanced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="balance"

        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/high_protein"
        app:layout_constraintLeft_toLeftOf="@id/guidelineF"
        app:layout_constraintTop_toBottomOf="@id/diet" />

    <CheckBox
        android:id="@+id/high_protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="high-protein"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/low_fat"
        app:layout_constraintLeft_toRightOf="@id/guidelineF"
        app:layout_constraintTop_toBottomOf="@id/balanced" />

    <CheckBox
        android:id="@+id/low_fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="low-fat"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/low_carb"
        app:layout_constraintLeft_toRightOf="@id/guidelineF"
        app:layout_constraintTop_toBottomOf="@id/high_protein" />

    <CheckBox
        android:id="@+id/low_carb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="low-carb"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/guidelineH"
        app:layout_constraintLeft_toRightOf="@id/guidelineF"
        app:layout_constraintTop_toBottomOf="@id/low_fat" />


    <CheckBox
        android:id="@+id/vegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="vegeterian"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/vegan"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/diet" />

    <CheckBox
        android:id="@+id/vegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="vegan"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/immunosupportive"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/vegetarian" />


    <CheckBox
        android:id="@+id/immunosupportive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:foregroundGravity="left"
        android:gravity="center"
        android:text="immuno-supportive"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/gluten"

        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/vegan" />

    <CheckBox
        android:id="@+id/gluten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:text="gluten-free"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/guidelineH"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/immunosupportive" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchWidget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:checked="true"
        android:textOff="OFF"
        android:textOn="ON"
        app:layout_constraintBottom_toTopOf="@id/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/slider"
        app:layout_constraintTop_toBottomOf="@id/guidelineH2" />

    <TextView
        android:id="@+id/calories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Calories"
        android:textColor="@color/white"
        android:textSize="18sp"

        app:layout_constraintBottom_toTopOf="@id/search_button"
        app:layout_constraintEnd_toStartOf="@+id/slider"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineH2"
        app:layout_constraintVertical_bias="0.494" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"

        android:tooltipText="Calories"
        android:valueFrom="0"
        android:valueTo="4000"
        app:layout_constraintBottom_toTopOf="@id/search_button"
        app:layout_constraintEnd_toStartOf="@+id/switchWidget"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/calories"
        app:layout_constraintTop_toBottomOf="@id/guidelineH2"
        app:values="@array/initial_values" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ingredients"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/guidelineH2"
        app:layout_constraintLeft_toRightOf="@id/guidelineF"
        app:layout_constraintRight_toLeftOf="@id/ingrInput"
        app:layout_constraintTop_toBottomOf="@id/guidelineH" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingrInput"
        android:layout_width="70sp"
        android:layout_height="wrap_content"
        android:hint="Up to"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"

        app:layout_constraintBottom_toTopOf="@id/guidelineH2"
        app:layout_constraintLeft_toLeftOf="@id/ingredients"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineH">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/ingrInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Searchbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider" />


</androidx.constraintlayout.widget.ConstraintLayout>